; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_scansup.c_truncate_identifier.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_scansup.c_truncate_identifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NAMEDATALEN = common dso_local global i32 0, align 4
@NOTICE = common dso_local global i32 0, align 4
@ERRCODE_NAME_TOO_LONG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"identifier \22%s\22 will be truncated to \22%s\22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @truncate_identifier(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @NAMEDATALEN, align 4
  %11 = icmp sge i32 %9, %10
  br i1 %11, label %12, label %43

12:                                               ; preds = %3
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @NAMEDATALEN, align 4
  %16 = sub nsw i32 %15, 1
  %17 = call i32 @pg_mbcliplen(i8* %13, i32 %14, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %38

20:                                               ; preds = %12
  %21 = load i32, i32* @NAMEDATALEN, align 4
  %22 = zext i32 %21 to i64
  %23 = call i8* @llvm.stacksave()
  store i8* %23, i8** %7, align 8
  %24 = alloca i8, i64 %22, align 16
  store i64 %22, i64* %8, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @memcpy(i8* %24, i8* %25, i32 %26)
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8, i8* %24, i64 %29
  store i8 0, i8* %30, align 1
  %31 = load i32, i32* @NOTICE, align 4
  %32 = load i32, i32* @ERRCODE_NAME_TOO_LONG, align 4
  %33 = call i32 @errcode(i32 %32)
  %34 = load i8*, i8** %4, align 8
  %35 = call i32 @errmsg(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %34, i8* %24)
  %36 = call i32 @ereport(i32 %31, i32 %35)
  %37 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %37)
  br label %38

38:                                               ; preds = %20, %12
  %39 = load i8*, i8** %4, align 8
  %40 = load i32, i32* %5, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %39, i64 %41
  store i8 0, i8* %42, align 1
  br label %43

43:                                               ; preds = %38, %3
  ret void
}

declare dso_local i32 @pg_mbcliplen(i8*, i32, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
